Basic rtl (#997)
* RTL for vanilla bootstrap is added

* RTL support for bootswatch was added