@@ -2,11 +2,13 @@ package de.agilecoders.wicket.themes.markup.html.bootswatch;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Locale;
 
 import org.apache.wicket.Application;
 import org.apache.wicket.markup.head.CssHeaderItem;
 import org.apache.wicket.markup.head.HeaderItem;
 import org.apache.wicket.markup.head.IHeaderResponse;
+import org.apache.wicket.protocol.http.WebSession;
 import org.apache.wicket.request.Url;
 import org.apache.wicket.request.resource.ResourceReference;
 import org.apache.wicket.request.resource.UrlResourceReference;
@@ -30,42 +32,55 @@ public enum BootswatchTheme implements ITheme {
      * The placeholders are:
      * - the version
      * - the theme name
-     * Example: ////cdn.jsdelivr.net/npm/bootswatch@4.6.0/dist/cosmos/bootstrap.min.css
+     * Example: ////cdn.jsdelivr.net/npm/bootswatch@5.3.1/dist/cosmo/bootstrap.min.css
+     * Example: ////cdn.jsdelivr.net/npm/bootswatch@5.3.1/dist/cosmo/bootstrap.rtl.min.css
      */
-    private static final String CDN_PATTERN = "////cdn.jsdelivr.net/npm/bootswatch@%s/dist/%s/bootstrap.min.css";
+    private static final String CDN_PATTERN = "////cdn.jsdelivr.net/npm/bootswatch@%s/dist/%s/bootstrap%s.min.css";
 
-    private String cdnUrl;
+    private final String cdnUrl;
     private final ResourceReference reference;
+    private final String rtlCdnUrl;
+    private final ResourceReference rtlReference;
 
     /**
      * Construct.
      */
     BootswatchTheme() {
-        this.reference = new BootswatchCssReference(name().toLowerCase());
+        String lName = name().toLowerCase(Locale.ROOT);
+        this.cdnUrl = String.format(CDN_PATTERN, getBootstrapVersion(), lName, "");
+        this.reference = new BootswatchCssReference(lName);
+
+        String dot = ".";
+        String rtl = "rtl";
+        String rtlName = rtl + dot + lName;
+        this.rtlCdnUrl = String.format(CDN_PATTERN, getBootstrapVersion(), lName, dot + rtl);
+        this.rtlReference = new BootswatchCssReference(rtlName);
+    }
+
+    private boolean isRtl() {
+        return WebSession.exists() && WebSession.get().isRtlLocale();
     }
 
     @Override
     public Iterable<String> getCdnUrls() {
-        return Collections.singletonList(cdnUrl);
+        return List.of(); // no-op
     }
 
     @Override
     public List<HeaderItem> getDependencies() {
-        return Collections.singletonList(CssHeaderItem.forReference(reference).setId(BOOTSTRAP_THEME_MARKUP_ID));
+        ResourceReference ref;
+        if (useCdnResources()) {
+            ref = new UrlResourceReference(Url.parse(isRtl() ? rtlCdnUrl : cdnUrl));
+        } else {
+            ref = isRtl() ? rtlReference : reference;
+        }
+        return List.of(CssHeaderItem.forReference(ref).setId(BOOTSTRAP_THEME_MARKUP_ID));
     }
 
     @Override
     public void renderHead(IHeaderResponse response) {
-        if (useCdnResources()) {
-            if (cdnUrl == null) {
-                cdnUrl = String.format(CDN_PATTERN, getBootstrapVersion(), name().toLowerCase());
-            }
-            response.render(CssHeaderItem.forReference(new UrlResourceReference(Url.parse(cdnUrl))));
-        }
-        else {
-            for (HeaderItem headerItem : getDependencies()) {
-                response.render(headerItem);
-            }
+        for (HeaderItem headerItem : getDependencies()) {
+            response.render(headerItem);
         }
     }
 
